--- a/static/hey.css
+++ b/static/hey.css
@@ -38,9 +38,9 @@ body{
 }
 #sub-container{
     position: fixed;
-    top: 10%;
+   margin-top: 102px;
      /* border: 2px solid red;   */
-    height: 55px;
+    height: 50px;
     width: 100%;
    background-color: rgba(10,21,83,255); 
  
@@ -77,11 +77,13 @@ body{
 }
 
 #contain{
+
   width: 100%;
+  max-width: 100%;
     position: relative;
-   top: 272px;
+   padding-top: 140px;
    
-     border: 1px solid red; 
+     border: 1px solid green;  
     /* border-bottom: 2px solid green; */
    height: 350px;
     z-index: -100;
@@ -93,20 +95,20 @@ body{
 
 .cont1{
 height: 100%;
-width: 70%;
+width: 60%;
 /* border: 1px solid yellow; */
 display: flex;
 flex-direction: column;
 }
 .cont2{
-width: 30%;
+width: 40%;
 height: 100%;
 z-index: -100;
 /* border: 1px solid green; */
 }
 
 .slider-container {
-      width: 100%;
+      width: 100%; 
       
       overflow: hidden;
       position: relative;
@@ -120,6 +122,7 @@ z-index: -100;
       display: flex;
       
       transition: transform 2s ease-in-out;
+      align-items: center;
       
       /* border: 2px solid orange; */
 
@@ -139,14 +142,16 @@ z-index: -100;
 
     .slide img {
     
-      width: 100%;
+      width: 85%;
       
-      height: 80%;
+      height: 250px;
       object-fit: cover;
     
     }
 
-    .slide-label a {
+    .slide-label  {
+      width: 80%;
+      height: 20px;
       text-align: center;
       display: inline-block;
       padding: 8px 12px;
@@ -257,7 +262,8 @@ z-index: -100;
 
 
 h1{
-  font-size: 350%;
+  font-size: 250%;
+  margin-top: 70px;
 }
 
 .highlight{
@@ -398,18 +404,20 @@ text-align: center;
 }
 
 #following{
-    width: 10%;
+ 
+    width: 80px;
     height: 100%;
     border: 1px solid white;
-    position: relative;
-    left: 39%;
+   position: absolute;
+   right: 10px;
+    
     text-align: center;
 }
 
 #notfollowing{
-    width: 100%;
-    height: 100%;
+   font-size: 15px;
     color: white;
+    border: 1px solid magenta;
 }
 
 #burgermenu{
@@ -1237,3 +1245,50 @@ right: 30px;
 #chat-form button:hover {
   background-color: #357ac8;
 }
+
+
+
+
+@media(max-width:414px){
+.cont1{
+  height: 100%;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+}
+
+.cont2{
+  width: 60%;
+  height: 100%;
+  z-index: -100;
+}
+h1{
+  font-size: 150%;
+}
+
+.slide img{
+  height: 200px;
+  
+}
+
+}
+
+@media(max-width:430px){
+.cont1{
+  height: 100%;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+}
+
+.cont2{
+  width: 60%;
+  height: 100%;
+  z-index: -100;
+}
+h1{
+  font-size: 100%;
+}
+}
+
+
